[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Enemies/Plant/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Plant/Seed.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.12311

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="Seed" type="StaticBody2D" groups=["Enemies"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.4, 0.4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
